--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       font-size: 17px;
       line-height: 1.6;
     ">
-      This is just a quiet little corner of the internet.<br>
-      Take a breath. You’re doing fine.
+      If you're reading this, HONK!<br>
+      Also why did you scan a random QR code on the back of someone's car?
     </p>
   </div>
 
