--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       line-height: 1.6;
     ">
       If you're reading this, HONK!<br>
-      Also why did you scan a random QR code on the back of someone's car?
+      Also why'd you scan a random QR code on the back of my car?
     </p>
   </div>
 
