--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <p style="
       margin: 0;
       font-size: 30px;
+      font-weight: 300;
       line-height: 1.6;
     ">
       If you're reading this, HONK!<br>
