--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(135deg, #f3f4f7, #e8edf2);
+  background: linear-gradient(135deg, #b89988, #997565, #836053);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
   color: #333;
 ">
 
   <div style="
-    background: rgba(60.0, 45.9, 39.6, 0.85);
+    background: rgba(225, 225, 225, 0.85);
     padding: 60px;
     border-radius: 16px;
     max-width: 800px;
